# dataprob

./: .readthedocs.yaml  LICENSE  MANIFEST.in  README.md  README.rst  pypi-publish.yml  pyproject.toml  run_all_tests.sh  setup.py
.github/workflows/: python-app.yml
docs/: conf.py  index.rst
docs/source/: conf.py  index.rst  links.rst
examples/: Untitled.ipynb  Untitled1.ipynb  api-example.ipynb  binding-curves.json  binding-curves_noise-0.000.csv  binding-curves_noise-0.050.csv  binding-curves_noise-0.100.csv  binding.ipynb  example-fit.ipynb  exponential-saturation.ipynb  generate-test-data.ipynb  global-fit.ipynb  lagged-exponential.ipynb  linear-extrapolation-folding.ipynb  linear.ipynb  michaelis-menten.ipynb  michealis-menten.ipynb  multi-gaussian.ipynb  periodic.ipynb  polynomial.ipynb  simple-example.ipynb
likelihood/: __init__.py  base.py  bayesian.py  bootstrap.py  fit_param.py  ml.py  model_wrapper.py  utils.py
likelihood/fitters/: __init__.py  base.py  bayesian.py  ml.py
reports/: completeness-crawler.txt  flake.txt
reports/junit/: junit.xml
src/dataprob/: __init__.py  __version__.py  check.py  fit_param.py  model_wrapper.py  prior.py
src/likelihood/: fit_param.py
tests/: conftest.py  fit_param.py  test_base.py  test_bayesian.py  test_bootstrap.py  test_fit_param.py  test_integration.py  test_ml.py  test_model_wrapper.py  test_sampling.py
tests/dataprob/: conftest.py  test_check.py  test_fit_param.py  test_integration.py  test_ml.py  test_model_wrapper.py  test_package.py  test_prior.py  test_sampling.py
tests/examples/: Untitled.ipynb  (+3 more)
(+74 files in other folders)
